#10 fixed some errors
